--- a/Documentation/Intel/development.html
+++ b/Documentation/Intel/development.html
@@ -125,6 +125,7 @@
   <li>Payload and OS Features:
     <ul>
       <li><a target="_blank" href="SoC/soc.html#AcpiTables">ACPI Tables</a></li>
+      <li><a target="_blank" href="SoC/soc.html#LegacyHardware">Legacy hardware</a> support</li>
     </ul>
   </li>
 </ul>
@@ -140,6 +141,16 @@
     <th>SoC</th>
     <th>Where</th>
     <th>Testing</th>
+  </tr>
+  <tr>
+    <td>8254 Programmable Interval Timer</td>
+    <td><a target="_blank" href="SoC/soc.html#LegacyHardware">Legacy hardware</a> support</td>
+    <td><a target="_blank" href="SoC/quark.html#CorebootPayloadPkg">CorebootPayloadPkg</a> gets to shell prompt</td>
+  </tr>
+  <tr>
+    <td>8259 Programmable Interrupt Controller</td>
+    <td><a target="_blank" href="SoC/soc.html#LegacyHardware">Legacy hardware</a> support</td>
+    <td><a target="_blank" href="SoC/quark.html#CorebootPayloadPkg">CorebootPayloadPkg</a> gets to shell prompt</td>
   </tr>
   <tr>
     <td>Cache-as-RAM</td>
@@ -335,6 +346,6 @@
 
 
 <hr>
-<p>Modified: 20 February 2016</p>
+<p>Modified: 24 February 2016</p>
   </body>
 </html>
